servers/s2/iptables/rules.v4
# Generated by iptables-save v1.8.10 (nf_tables) on Sat Jun  6 13:49:08 2026
*filter
:INPUT ACCEPT [245469:104961709]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i tun0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i tun0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT ! -i tun0 -p tcp -m tcp --dport 80 -j DROP
-A INPUT ! -i tun0 -p udp -m udp --dport 53 -j DROP
-A INPUT ! -i tun0 -p tcp -m tcp --dport 53 -j DROP
-A INPUT -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i tun0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i tun0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i tun0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i tun0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -i tun0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i tun0 -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -i tun0 -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 1194 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j DROP
-A INPUT -p tcp -m tcp --dport 53 -j DROP
-A INPUT -p tcp -m tcp --dport 80 -j DROP
-A INPUT -p tcp -m tcp --dport 80 -j DROP
-A INPUT -p udp -m udp --dport 53 -j DROP
-A INPUT -p tcp -m tcp --dport 53 -j DROP
-A FORWARD -i ens3 -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i tun0 -o ens3 -j ACCEPT
COMMIT
# Completed on Sat Jun  6 13:49:08 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Sat Jun  6 13:49:08 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [401:30550]
-A POSTROUTING -s 10.8.0.0/24 -o ens3 -j MASQUERADE
-A POSTROUTING -s 10.8.0.0/24 -o ens3 -j MASQUERADE
-A POSTROUTING -s 10.9.0.0/24 -o ens3 -j MASQUERADE
COMMIT
# Completed on Sat Jun  6 13:49:08 2026
